--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.11.21",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.4",
+    "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^18.2.0",
